2000-05-30  Larry Ewing  <lewing@helixcode.com>

	* htmlengien.c (html_engine_destroy): destroy the clue as well
	fixes http://bugzilla.helixcode.com/show_bug.cgi?id=200
	
2000-05-30  Larry Ewing  <lewing@helixcode.com>

	* htmlengine.c (parse_object): call gtk_html_embedded_new with
	content type argment.

	* gtkhtml-embedded.h: add type to object definition.

	* gtkhtml-embedded.c (gtk_html_embedded_new): add type argument.
	(gtk_html_embedded_finalize): free type member.

2000-05-30  Larry Ewing  <lewing@helixcode.com>

	* gtkhtml.c (html_engine_object_requested_cb): check and return
	the return value.
	(class_init): change the object_requested signal to have a return value.

	* gtkhtml.h: change the object_requested signal prototype.

	* htmlengine.c (discard_body): new helper function to discard
	tokens before end tag.
	(parse_object): added function to handle the elements inside an
	object tag.
	(parse_o): call parse_object.
	(html_engine_class_init): change the object_requested signal to have a boolean
	return value.

	* htmlengine.h: change the object_requested signal prototype.

	* testgtkhtml.c (object_requested_cmd): add a testcase for
	object_request to return FALSE.

2000-05-30  Larry Ewing  <lewing@helixcode.com>

	* htmliframe.c (calc_size): preliminary code to try to get a
	proper size when width and height are not set.
	(html_iframe_init): initialize the new variables and properly set
	width and height.
	(calc_min_width): add the start of a new implementation, this
	should fix dan's problem with resizing in the short term. needs
	more work though.

	* htmliframe.h: add variables for the scroll widget and the html
	widget for now.
	
	* htmlengine.c (parse_iframe): change default size.

2000-05-29  Dan Winship  <danw@helixcode.com>

	* htmlclueflow.c (html_clueflow_class_init): Fix typo. (Don't use
	save_plain to implement HTMLObject:save.)

	* htmlengine-save.c (html_engine_save_plain): Call
	html_object_save_plain rather than html_object_save.
